Decrease code font size so that we avoid wrapping

--- a/src/main/site/css/main.css
+++ b/src/main/site/css/main.css
@@ -239,7 +239,7 @@ li {
 pre,code {
   color: #007000;
   font-family: "bogus font here", monospace;
-  font-size: 100%;
+  font-size: 70%;
 }
 
 pre {
